--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  .bottom-float {
+    @apply absolute bottom-0 left-0 right-0;
+  }
+
+  .dark-overlay {
+    @apply bg-gray-900 bg-opacity-50 text-white;
+  }
+}
