--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,6 +14,40 @@
   .dark-overlay {
     @apply bg-gray-900 bg-opacity-70 text-white;
   }
+
+  .hide-small {
+    @apply hidden lg:inline-block;
+  }
+
+  .nav-link {
+    @apply text-gray-500 hover:text-gray-600;
+    @apply dark:hover:text-gray-400;
+  }
+
+  .pill {
+    @apply rounded-full px-4 py-1 ml-2 border text-sm;
+    @apply bg-gray-100 border-gray-200 text-gray-700;
+    @apply dark:bg-gray-800 dark:border-gray-700 dark:text-gray-300;
+  }
+
+  .header {
+    @apply grid justify-between items-center content-center;
+    @apply p-8 border-b;
+    @apply text-gray-700 border-gray-200;
+    @apply dark:text-gray-300 dark:border-gray-700;
+
+    grid-template-columns: 1fr 2fr 1fr;
+  }
+
+  .footer {
+    @apply p-8  border-t;
+    @apply text-gray-500 border-gray-200;
+    @apply dark:border-gray-700;
+  }
+}
+
+html, body {
+  @apply min-h-screen;
 }
 
 body {
